--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-  <h1>Hello, Bad aSSSSSSSSDDDDddddddd!</h1>
+  <h1>Hello, Bad ASSS!</h1>
   <p>This is needed to be deployed version HTML file for testing purposes.Update by 06006</p>
 </body>
 </html>
